add new error handling content. Added XSS escape function to prevent user input injection

--- a/public/index.html
+++ b/public/index.html
@@ -46,6 +46,9 @@
     <!-- Page-specific (main) content here -->
     <main class="container">
       <section id="new-tweet">
+        <div class="err-msg">
+
+        </div>
         <div>
           <h2>Compose Tweet</h2>
         </div>
